Reposer the beta information

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	    <h3>1.0.0 (see <a href='https://github.com/Gulix/citizen-assemble/releases/tag/v1.0.0'>Release Notes</a>)</h3>
         <p>Citizen Assemble is a Team Builder tool for the Pulp City Miniatures Game.
 It's an HTML/Javascript only project, intended to be used online/offline, with no data stored.</p>
-        <p>Do you want to <a href="builder/builder.html">test it</a> ? (Beta test)</p>
+        <p>Do you want to <a href="builder/builder.html">test it</a> ?</p>
       </section>
     </div>
 
