--- a/builder/test.html
+++ b/builder/test.html
@@ -19,10 +19,10 @@
     </div>
   </div>
 
-  <div class="faction-selection global-container">
+  <div class="affiliation-selection global-container">
     <h2>Choose your faction / alignment</h2>
-    <div class="factions-boxes" data-bind="foreach: factions">
-      <faction-box params="faction: $data"></faction-box>
+    <div class="affiliation-boxes" data-bind="foreach: affiliations">
+      <affiliation-box params="affiliation: $data"></affiliation-box>
     </div>
   </div>
 
