--- a/builder/test.html
+++ b/builder/test.html
@@ -19,23 +19,28 @@
     </div>
   </div>
 
+  <!-- ko if: isAffiliationDisplayed -->
   <div class="affiliation-selection global-container">
     <h2>Choose your faction / alignment</h2>
     <div class="affiliation-boxes" data-bind="foreach: affiliations">
       <affiliation-box params="affiliation: $data"></affiliation-box>
     </div>
   </div>
+  <!-- /ko -->
 
-  <div class="menu-bar">
-  </div>
-
+  <!-- ko if: myTeamDisplayed -->
   <div class="supreme-roster global-container">
     <h2>My Team</h2>
     <div class="my-roster">
-      <div class="roster-resume">
-        <div class="roster-resume-detail"><span class="label">Levels :</span> 5</div>
-        <div class="roster-resume-detail"><span class="label">AP+ :</span> 5</div>
-        <div class="roster-resume-detail"><span class="label">PA+ :</span> 0</div>
+      <div class="roster-general">
+        <div class="team-affiliation" data-bind="attr: { 'style': affiliationStyle }">
+          <img data-bind="attr: { 'src': affiliationImageSrc }" />
+          <div class="roster-resume">
+            <div class="roster-resume-detail"><span class="label">Levels :</span> 5</div>
+            <div class="roster-resume-detail"><span class="label">AP+ :</span> 5</div>
+            <div class="roster-resume-detail"><span class="label">Mi+ :</span> 0</div>
+          </div>
+        </div>
       </div>
       <div class="roster-supreme supreme-origin-nature" style="background-image: url(img/supremes/solar.jpg)">
         <div class="supreme-icons">
@@ -59,6 +64,7 @@
       </div>
     </div>
   </div>
+  <!-- /ko -->
 
   <div class="menu-bar">
   </div>
