--- a/builder/test.html
+++ b/builder/test.html
@@ -29,16 +29,16 @@
   <!-- /ko -->
 
   <!-- ko if: myTeamDisplayed -->
-  <div class="supreme-roster global-container">
+  <div class="supreme-roster global-container" data-bind="with: team">
     <h2>My Team</h2>
     <div class="my-roster">
       <div class="roster-general">
         <div class="team-affiliation" data-bind="attr: { 'style': affiliationStyle }">
           <img data-bind="attr: { 'src': affiliationImageSrc }" />
           <div class="roster-resume">
-            <div class="roster-resume-detail"><span class="label">Levels :</span> 5</div>
-            <div class="roster-resume-detail"><span class="label">AP+ :</span> 5</div>
-            <div class="roster-resume-detail"><span class="label">Mi+ :</span> 0</div>
+            <div class="roster-resume-detail"><span class="label">Levels :</span> <span data-bind="text: totalLevels"></span></div>
+            <div class="roster-resume-detail"><span class="label">AP+ :</span> <span data-bind="text: totalActionPoints"></span></div>
+            <div class="roster-resume-detail"><span class="label">Mi+ :</span> <span data-bind="text: totalMinionsPoints"></span></div>
           </div>
         </div>
       </div>
