--- a/builder/test.html
+++ b/builder/test.html
@@ -55,6 +55,10 @@
 
   <div class="supreme-selection global-container">
     <h2>Recruit your Supremes</h2>
+    <div data-bind="with: supremeFilter">
+      <select data-bind="options: origins, optionsText: 'origin_label', value: selectedOrigin,"></select>
+      <select data-bind="options: roles, optionsText: 'role_label', value: selectedRole,"></select>
+    </div>
     <div class="recruitment-list" data-bind="foreach: recruitableSupremes">
       <supreme-box params="supreme: $data"></supreme-box>
     </div>
