--- a/builder/test.html
+++ b/builder/test.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Citizen Assemble ! Pulp City Team Builder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/test.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/icons.css" />
     <link href="https://fonts.googleapis.com/css?family=Bangers|Oswald" rel="stylesheet">
   </head>
 <body>
