--- a/builder/test.html
+++ b/builder/test.html
@@ -53,17 +53,9 @@
       </div>
       <div class="roster-cards" data-bind="visible: isCardsVisible">
         <div class="card-title"><span class="icon-cards"></span><span data-bind="text: nbLeaderCards"></span> Leader Cards</div>
-        <div class="card-action"><span class="icon-add-card card-action-icon"></span>Select one ...</div>
-
-      </div>
-      <div class="modal-box" data-bind="visible: isTeamCodeVisible">
-        <div class="modal-close" data-bind="click: hideCode"></div>
-        <div class="modal-content">
-          <div class="modal-label">Unique Team Code</div>
-          <div>
-            <input type="text" readonly class="team-code" data-bind="value: teamCode"></input>
-          </div>
-        </div>
+        <div class="card-action" data-bind="click: showLeaderCardSelection"><span class="icon-add-card card-action-icon"></span>Select one ...</div>
+        <div class="card-honorary-member" data-bind="visible: isHonoraryMemberSelected"><span class="icon-honorary-member"></span>Honorary Member</div>
+        <div class="card-honorary-member-name" data-bind="visible: isHonoraryMemberSelected, text: honoraryMemberName"></div>        
       </div>
       <!-- ko foreach: rosterSupremes -->
       <supreme-box params="supreme: $data"></supreme-box>
@@ -86,6 +78,57 @@
       <supreme-box params="supreme: $data"></supreme-box>
     </div>
   </div>
+  <!-- /ko -->
+
+  <!-- ko if: myTeamDisplayed -->
+  <!-- ko with: team -->
+  <div class="modal-box" data-bind="visible: isTeamCodeVisible">
+    <div class="modal-close" data-bind="click: hideCode"></div>
+    <div class="modal-content">
+      <div class="modal-label">Unique Team Code</div>
+      <div>
+        <input type="text" readonly class="team-code" data-bind="value: teamCode"></input>
+      </div>
+    </div>
+  </div>
+  <div class="modal-box" data-bind="visible: isLeaderCardSelectionVisible">
+    <div class="modal-close" data-bind="click: hideLeaderCardSelection"></div>
+    <div class="modal-content">
+      <div class="modal-label">Select a Leader Card</div>
+      <div class="leader-cards-list">
+        <!-- ko if: !isHonoraryMemberSelected() -->
+        <!-- ko foreach: leaderCardsProviders -->
+        <div class="leader-card" data-bind="click: function() { $parent.chooseHonoraryMember($data) }">
+          <div class="leader-card-title">Honorary Member</div>
+          <div class="leader-card-text">One Supreme in your Team may be counted as the same Faction as the Leader.</div>
+          <div class="leader-card-legend">Provided by <span data-bind="text: jsonData.name"></span></div>
+        </div>
+        <!-- /ko -->
+        <!-- /ko -->
+        <div class="leader-card leader-card-disabled">
+          <div class="leader-card-title">Recruitment Blitz</div>
+          <div class="leader-card-text">Your Team has an additional 3 Levels of Minions Cards.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ko if: isHonoraryMembersSelectable -->
+  <div class="modal-box">
+    <div class="modal-close" data-bind="click: endHonoraryMemberSelection"></div>
+    <div class="modal-content modal-content-large">
+      <div class="modal-label">Select your Honorary Member</div>
+      <div data-bind="with: $parent.supremeFilter">
+        <select data-bind="options: origins, optionsText: 'origin_label', value: selectedOrigin,"></select>
+        <select data-bind="options: roles, optionsText: 'role_label', value: selectedRole,"></select>
+      </div>
+      <div class="recruitment-list scrollable-list" data-bind="foreach: possibleHonoraryMembers">
+        <supreme-box params="supreme: $data"></supreme-box>
+      </div>
+      </div>
+    </div>
+  </div>
+  <!-- /ko -->
+  <!-- /ko -->
   <!-- /ko -->
 
   <script src="js/vendor/require.min.js" data-main="js/main.js"></script>
